create layout for sign up, header

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -9,7 +9,38 @@
 </head>
 
 <body>
+  <!-- sign up start  -->
+  <div class="sign-up">
+    <p class="sign-up__text">Sign up and get 20% off to your first order. <a class="sign-up__link" href="javascript:void(0)">Sign Up
+        Now</a></p>
+    <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/off.svg" alt="off"></a>
+  </div>
+  <!-- sign up end  -->
 
+  <!-- header start  -->
+  <div class="container">
+    <header class="header">
+      <div class="header__item">
+        <img class="header__icon" src="assets/images/nav.png" alt="nav">
+        <h1 class="title title-primary"><a class="link" href="javascrip:void(0)">SHOP.CO</a></h1>
+      </div>
+      <ul class="header__nav">
+        <li class="header__nav-item"><a class="link" href="">Shop</a></li>
+        <li class="header__nav-item"><a class="link" href="">On Sale</a></li>
+        <li class="header__nav-item"><a class="link" href="">New Arrivals</a></li>
+        <li class="header__nav-item"><a class="link" href="">Brand</a></li>
+      </ul>
+      <form action="">
+        <input class="search" type="text" placeholder="Search for products...">
+      </form>
+      <div class="header__item">
+        <img class="header__icon" src="assets/images/search-icon.png" alt="search-icon">
+        <a class="link" href="javascrip:void(0)"><img src="assets/images/cart.svg" alt="cart"></a>
+        <a class="link" href="javascrip:void(0)"><img src="assets/images/login.svg" alt="login"></a>
+      </div>
+    </header>
+  </div>
+  <!-- header end  -->
 </body>
 
 </html>
