rename class naming for header

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -19,24 +19,24 @@
 
   <!-- header start  -->
   <div class="container">
-    <header class="header">
-      <div class="header__item">
-        <img class="header__icon" src="assets/images/nav.png" alt="nav">
+    <header class="navbar">
+      <div class="navbar__logo">
+        <img class="navbar__icon-navbar" src="assets/images/nav.png" alt="nav">
         <h1 class="title title-primary"><a class="link" href="javascrip:void(0)">SHOP.CO</a></h1>
       </div>
-      <ul class="header__nav">
-        <li class="header__nav-item"><a class="link" href="">Shop</a></li>
-        <li class="header__nav-item"><a class="link" href="">On Sale</a></li>
-        <li class="header__nav-item"><a class="link" href="">New Arrivals</a></li>
-        <li class="header__nav-item"><a class="link" href="">Brand</a></li>
+      <ul class="navbar__list">
+        <li><a class="link" href="">Shop</a></li>
+        <li><a class="link" href="">On Sale</a></li>
+        <li><a class="link" href="">New Arrivals</a></li>
+        <li><a class="link" href="">Brand</a></li>
       </ul>
       <form action="">
-        <input class="search" type="text" placeholder="Search for products...">
+        <input class="navbar__search" type="text" placeholder="Search for products...">
       </form>
-      <div class="header__item">
-        <img class="header__icon" src="assets/images/search-icon.png" alt="search-icon">
-        <a class="link" href="javascrip:void(0)"><img src="assets/images/cart.svg" alt="cart"></a>
-        <a class="link" href="javascrip:void(0)"><img src="assets/images/login.svg" alt="login"></a>
+      <div class="navbar__icon">
+        <a href="javascrip:void(0)"><img class="navbar__icon-search" src="assets/images/search-icon.png" alt="search-icon"></a>
+        <a href="javascrip:void(0)"><img src="assets/images/cart.svg" alt="cart"></a>
+        <a href="javascrip:void(0)"><img src="assets/images/login.svg" alt="login"></a>
       </div>
     </header>
   </div>
