create folder image section and split icon smaller

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -13,7 +13,7 @@
   <div class="sign-up">
     <p class="sign-up__text">Sign up and get 20% off to your first order. <a class="sign-up__link" href="javascript:void(0)">Sign Up
         Now</a></p>
-    <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/off.svg" alt="off"></a>
+    <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/headers/off.svg" alt="off"></a>
   </div>
   <!-- sign up end  -->
 
@@ -21,7 +21,7 @@
   <div class="container">
     <header class="navbar">
       <div class="navbar__logo">
-        <img class="navbar__icon-navbar" src="assets/images/nav.png" alt="nav">
+        <img class="navbar__icon-navbar" src="assets/images/headers/nav.png" alt="nav">
         <h1 class="title title-primary"><a class="link" href="javascrip:void(0)">SHOP.CO</a></h1>
       </div>
       <ul class="navbar__list">
@@ -34,9 +34,9 @@
         <input class="navbar__search" type="text" placeholder="Search for products...">
       </form>
       <div class="navbar__icon">
-        <a href="javascrip:void(0)"><img class="navbar__icon-search" src="assets/images/search-icon.png" alt="search-icon"></a>
-        <a href="javascrip:void(0)"><img src="assets/images/cart.svg" alt="cart"></a>
-        <a href="javascrip:void(0)"><img src="assets/images/login.svg" alt="login"></a>
+        <a href="javascrip:void(0)"><img class="navbar__icon-search" src="assets/images/headers/search-icon.png" alt="search-icon"></a>
+        <a href="javascrip:void(0)"><img src="assets/images/headers/cart.svg" alt="cart"></a>
+        <a href="javascrip:void(0)"><img src="assets/images/headers/login.svg" alt="login"></a>
       </div>
     </header>
   </div>
