--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -41,6 +41,23 @@
     </header>
   </div>
   <!-- header end  -->
+
+  <!-- banner start  -->
+  <section class="banner">
+    <div class="container">
+      <div class="banner__item banner__desc">
+        <h2 class="title title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
+        <p class="banner__content">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
+        <button class="btn btn__primary">Shop Now</button>
+      </div>
+      <div class="banner__item banner__info">
+        <p class="banner__info-num">200+<span class="banner__info-desc">International Brands</span></p>
+        <p class="banner__info-num">2,000+<span class="banner__info-desc">High-Quality Products</span></p>
+        <p class="banner__info-num banner__info-center">30,000+<span class="banner__info-desc">Happy Customers</span></p>
+      </div>
+    </div>
+  </section>
+  <!-- banner end  -->
 </body>
 
 </html>
