--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -22,7 +22,7 @@
   <header class="container">
     <nav class="navbar">
       <img class="navbar__nav" src="assets/images/headers/nav.png" alt="nav">
-      <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"alt=""></a></h1>
+      <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"alt="shopco"></a></h1>
       <ul class="navbar__list">
         <li><a class="link" href="">Shop</a></li>
         <li><a class="link" href="">On Sale</a></li>
