create layout for banner

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -22,7 +22,8 @@
   <header class="container">
     <nav class="navbar">
       <img class="navbar__nav" src="assets/images/headers/nav.png" alt="nav">
-      <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"alt="shopco"></a></h1>
+      <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"
+            alt="shopco"></a></h1>
       <ul class="navbar__list">
         <li><a class="link" href="">Shop</a></li>
         <li><a class="link" href="">On Sale</a></li>
@@ -44,19 +45,28 @@
 
   <!-- banner start  -->
   <section class="banner">
-    <div class="container">
+    <div class="container banner__item">
       <div class="banner__desc">
         <h2 class="title title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
-        <p class="banner__content">Browse through our diverse range of meticulously crafted garments, designed to bring out your individuality and cater to your sense of style.</p>
+        <p class="banner__content">Browse through our diverse range of meticulously crafted garments, designed to bring
+          out your individuality and cater to your sense of style.</p>
         <button class="btn btn__primary">Shop Now</button>
+        <div class="banner__info">
+          <p class="banner__info-num">200+<span class="banner__info-desc">International Brands</span></p>
+          <p class="banner__info-num banner--special">2,000+<span class="banner__info-desc">High-Quality Products</span>
+          </p>
+          <p class="banner__info-num banner__info--center">30,000+<span class="banner__info-desc">Happy Customers</span>
+          </p>
+        </div>
       </div>
-      <div class="banner__info">
-        <p class="banner__info-num">200+<span class="banner__info-desc">International Brands</span></p>
-        <p class="banner__info-num banner--special">2,000+<span class="banner__info-desc">High-Quality Products</span></p>
-        <p class="banner__info-num banner__info--center">30,000+<span class="banner__info-desc">Happy Customers</span></p>
+      <div>
+        <img class="banner__img" src="./assets/images/banners/bg-banner.png" alt="bg-banner">
+        <div class="banner__star">
+          <img class="banner__star--center" src="./assets/images/banners/star-full.png" alt="">
+          <img src="./assets/images/banners/star.svg" alt="">
+        </div>
       </div>
     </div>
-    <img class="banner__img" src="./assets/images/banners/bg-banner.png" alt="bg-banner">
   </section>
   <!-- banner end  -->
 </body>
