--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -62,7 +62,7 @@
       <img class="banner__img" src="./assets/images/banners/bg-banner.png" alt="bg-banner">
       <div class="banner__star">
         <img class="banner__star--center" src="./assets/images/banners/star-full.png" alt="">
-        <img src="./assets/images/banners/star.svg" alt="">
+        <img class="banner__star--right" src="./assets/images/banners/star.svg" alt="">
       </div>
     </div>
   </section>
