create layout for brand

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -67,6 +67,27 @@
     </div>
   </section>
   <!-- banner end  -->
+
+  <!-- brand start  -->
+  <section class="brand">
+    <div class="container brand__item">
+      <img src="./assets/images/brands/versace.png" alt="">
+      <img src="./assets/images/brands/zara.png" alt="">
+      <img src="./assets/images/brands/gucci.png" alt="">
+      <div class="brand--center">
+        <img src="./assets/images/brands/prada.png" alt="">
+        <img src="./assets/images/brands/calvin.png" alt="">
+      </div>
+    </div>
+    <div class="container brand__item-desktop">
+      <img class="brand__img" src="./assets/images/brands/versace-desktop.svg" alt="">
+      <img class="brand__img" src="./assets/images/brands/zara-desktop.png" alt="">
+      <img class="brand__img" src="./assets/images/brands/gucci-desktop.svg" alt="">
+      <img class="brand__img" src="./assets/images/brands/prada-desktop.svg" alt="">
+      <img class="brand__img" src="./assets/images/brands/calvin-desktop.svg" alt="">
+    </div>
+  </section>
+  <!-- brand end  -->
 </body>
 
 </html>
