--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -21,7 +21,7 @@
   <!-- header start  -->
   <header class="container">
     <nav class="navbar">
-      <img class="navbar__nav" src="assets/images/headers/nav.png" alt="nav">
+      <button class="navbar__nav"><img src="assets/images/headers/nav.png" alt="nav"></button>
       <h1><a class="link" href="javascrip:void(0)"><img class="navbar__logo" src="./assets/images/headers/shopco.png"
             alt="shopco"></a></h1>
       <ul class="navbar__list">
