create layout for product

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -88,6 +88,93 @@
     </div>
   </section>
   <!-- brand end  -->
+
+  <!-- product start  -->
+  <div class="container">
+    <section class="product">
+      <h2 class="title title-primary">new arrivals</h2>
+      <div class="product__item">
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
+          <p class="product__card-name">Vertical Striped Shirt</p>
+          <div class="product__evaluate">
+            <div>
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+          </div>
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;120</p>
+            <p class="product__price-sell">&#36;120</p>
+            <p class="product__price-precent">20%</p>
+          </div>
+        </div>
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
+          <p class="product__card-name">Vertical Striped Shirt</p>
+          <div class="product__evaluate">
+            <div>
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+          </div>
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;120</p>
+            <p class="product__price-sell">&#36;120</p>
+            <p class="product__price-precent">20%</p>
+          </div>
+        </div>
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
+          <p class="product__card-name">Vertical Striped Shirt</p>
+          <div class="product__evaluate">
+            <div>
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+          </div>
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;120</p>
+            <p class="product__price-sell">&#36;120</p>
+            <p class="product__price-precent">20%</p>
+          </div>
+        </div>
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
+          <p class="product__card-name">Vertical Striped Shirt</p>
+          <div class="product__evaluate">
+            <div>
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+          </div>
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;120</p>
+            <p class="product__price-sell">&#36;120</p>
+            <p class="product__price-precent">20%</p>
+          </div>
+        </div>
+      </div>
+      <button class="btn btn__secondary">view all</button>
+    </section>
+  </div>
+  <!-- product end -->
 </body>
 
 </html>
