--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -91,90 +91,146 @@
 
   <!-- product start  -->
   <div class="container">
-    <section class="product">
+    <section class="product product--bottom">
       <h2 class="title title-primary">new arrivals</h2>
+      <div class="product__item">
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/tapede-tails.png" alt="">
+          <p class="product__card-name">T-Shirt with Tape Details</p>
+          <div class="product__evaluate">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;120</p>
+          </div>
+        </div>
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/fit-jeans.png" alt="">
+          <p class="product__card-name">Skinny Fit Jeans</p>
+          <div class="product__evaluate">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="product__evaluate-num">3.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;240</p>
+            <p class="product__price-sell">&#36;260</p>
+            <p class="product__price-precent">-20%</p>
+          </div>
+        </div>
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/checkered-shirt.png" alt="">
+          <p class="product__card-name">Checkered Shirt</p>
+          <div class="product__evaluate">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;180</p>
+          </div>
+        </div>
+        <div class="product__card">
+          <img class="product__card-img" src="./assets/images/products/striped-t-shirt.png" alt="">
+          <p class="product__card-name">Sleeve Striped T-Shirt</p>
+          <div class="product__evaluate">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
+            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+          </div>
+          <div class="product__price">
+            <p>&#36;130</p>
+            <p class="product__price-sell">&#36;160</p>
+            <p class="product__price-precent">-30%</p>
+          </div>
+        </div>
+      </div>
+      <button class="btn btn__secondary">View All</button>
+    </section>
+  </div>
+  <!-- product end -->
+
+  <div class="container">
+    <section class="product">
+      <h2 class="title title-primary">top selling</h2>
       <div class="product__item">
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
           <p class="product__card-name">Vertical Striped Shirt</p>
           <div class="product__evaluate">
-            <div>
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
-          </div>
-            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <p class="product__evaluate-num">5.0/<span class="product__evaluate-desc">5</span></p>
           </div>
           <div class="product__price">
-            <p>&#36;120</p>
-            <p class="product__price-sell">&#36;120</p>
-            <p class="product__price-precent">20%</p>
+            <p>&#36;212</p>
+            <p class="product__price-sell">&#36;232</p>
+            <p class="product__price-precent">-20%</p>
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
-          <p class="product__card-name">Vertical Striped Shirt</p>
+          <img class="product__card-img" src="./assets/images/products/courage.png" alt="">
+          <p class="product__card-name">Courage Graphic T-Shirt</p>
           <div class="product__evaluate">
-            <div>
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
-          </div>
-            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+            <p class="product__evaluate-num">4.0/<span class="product__evaluate-desc">5</span></p>
           </div>
           <div class="product__price">
-            <p>&#36;120</p>
-            <p class="product__price-sell">&#36;120</p>
-            <p class="product__price-precent">20%</p>
+            <p>&#36;145</p>
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
-          <p class="product__card-name">Vertical Striped Shirt</p>
+          <img class="product__card-img" src="./assets/images/products/loose-fit.png" alt="">
+          <p class="product__card-name">Loose Fit Bermuda Shorts</p>
           <div class="product__evaluate">
-            <div>
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
-            <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
-          </div>
-            <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
+            <p class="product__evaluate-num">3.0/<span class="product__evaluate-desc">5</span></p>
           </div>
           <div class="product__price">
-            <p>&#36;120</p>
-            <p class="product__price-sell">&#36;120</p>
-            <p class="product__price-precent">20%</p>
+            <p>&#36;80</p>
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
-          <p class="product__card-name">Vertical Striped Shirt</p>
+          <img class="product__card-img" src="./assets/images/products/faded-skinny.png" alt="">
+          <p class="product__card-name">Faded Skinny Jeans</p>
           <div class="product__evaluate">
-            <div>
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-half.svg" alt="star-full">
-          </div>
             <p class="product__evaluate-num">4.5/<span class="product__evaluate-desc">5</span></p>
           </div>
           <div class="product__price">
-            <p>&#36;120</p>
-            <p class="product__price-sell">&#36;120</p>
-            <p class="product__price-precent">20%</p>
+            <p>&#36;210</p>
           </div>
         </div>
       </div>
-      <button class="btn btn__secondary">view all</button>
+      <button class="btn btn__secondary">View All</button>
     </section>
   </div>
-  <!-- product end -->
+
 </body>
 
 </html>
