add alt for image

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -61,8 +61,8 @@
       </div>
       <img class="banner__img" src="./assets/images/banners/bg-banner.png" alt="bg-banner">
       <div class="banner__star">
-        <img class="banner__star--center" src="./assets/images/banners/star-full.png" alt="">
-        <img class="banner__star--right" src="./assets/images/banners/star.svg" alt="">
+        <img class="banner__star--center" src="./assets/images/banners/star-full.png" alt="star-full">
+        <img class="banner__star--right" src="./assets/images/banners/star.svg" alt="star">
       </div>
     </div>
   </section>
@@ -71,20 +71,20 @@
   <!-- brand start  -->
   <section class="brand">
     <div class="container brand__item">
-      <img src="./assets/images/brands/versace.png" alt="">
-      <img src="./assets/images/brands/zara.png" alt="">
-      <img src="./assets/images/brands/gucci.png" alt="">
+      <img src="./assets/images/brands/versace.png" alt="versace">
+      <img src="./assets/images/brands/zara.png" alt="zara">
+      <img src="./assets/images/brands/gucci.png" alt="gucci">
       <div class="brand--center">
-        <img src="./assets/images/brands/prada.png" alt="">
-        <img src="./assets/images/brands/calvin.png" alt="">
+        <img src="./assets/images/brands/prada.png" alt="prada">
+        <img src="./assets/images/brands/calvin.png" alt="calvin">
       </div>
     </div>
     <div class="container brand__item-desktop">
-      <img class="brand__img" src="./assets/images/brands/versace-desktop.svg" alt="">
-      <img class="brand__img" src="./assets/images/brands/zara-desktop.png" alt="">
-      <img class="brand__img" src="./assets/images/brands/gucci-desktop.svg" alt="">
-      <img class="brand__img" src="./assets/images/brands/prada-desktop.svg" alt="">
-      <img class="brand__img" src="./assets/images/brands/calvin-desktop.svg" alt="">
+      <img class="brand__img" src="./assets/images/brands/versace-desktop.svg" alt="versace-desktop">
+      <img class="brand__img" src="./assets/images/brands/zara-desktop.png" alt="zara-desktop">
+      <img class="brand__img" src="./assets/images/brands/gucci-desktop.svg" alt="gucci-desktop">
+      <img class="brand__img" src="./assets/images/brands/prada-desktop.svg" alt="prada-desktop">
+      <img class="brand__img" src="./assets/images/brands/calvin-desktop.svg" alt="calvin-desktop">
     </div>
   </section>
   <!-- brand end  -->
@@ -95,7 +95,7 @@
       <h2 class="title title-primary">new arrivals</h2>
       <div class="product__item">
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/tapede-tails.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
           <p class="product__card-name">T-Shirt with Tape Details</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/fit-jeans.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/fit-jeans.png" alt="fit-jeans">
           <p class="product__card-name">Skinny Fit Jeans</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/checkered-shirt.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
           <p class="product__card-name">Checkered Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -141,7 +141,7 @@
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/striped-t-shirt.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
           <p class="product__card-name">Sleeve Striped T-Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -168,7 +168,7 @@
       <h2 class="title title-primary">top selling</h2>
       <div class="product__item">
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/veritical.png" alt="veritical">
           <p class="product__card-name">Vertical Striped Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -185,7 +185,7 @@
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/courage.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/courage.png" alt="courage">
           <p class="product__card-name">Courage Graphic T-Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -199,7 +199,7 @@
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/loose-fit.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
           <p class="product__card-name">Loose Fit Bermuda Shorts</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -212,7 +212,7 @@
           </div>
         </div>
         <div class="product__card">
-          <img class="product__card-img" src="./assets/images/products/faded-skinny.png" alt="">
+          <img class="product__card-img" src="./assets/images/products/faded-skinny.png" alt="faded-skinny">
           <p class="product__card-name">Faded Skinny Jeans</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
