create layout browse

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -231,6 +231,15 @@
     </section>
   </div>
 
+  <!-- browse start  -->
+  <div class="container">
+    <section class="browse">
+      <div class="br">
+      <h2 class="title title-secondary">BROWSE BY dress STYLE</h2>
+    </section>
+  </div>
+  <!-- browse end -->
+
 </body>
 
 </html>
