fix comments for product

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -11,11 +11,14 @@
 <body>
   <!-- sign up start  -->
   <div class="sign-up">
+    <div class="container sign-up">
     <p class="sign-up__text">Sign up and get 20% off to your first order. <a class="sign-up__link"
         href="javascript:void(0)">Sign Up
         Now</a></p>
     <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/headers/off.svg" alt="off"></a>
   </div>
+  </div>
+
   <!-- sign up end  -->
 
   <!-- header start  -->
@@ -47,10 +50,10 @@
   <section class="banner">
     <div class="container banner__item">
       <div class="banner__desc">
-        <h2 class="title title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
+        <h2 class="title-secondary">FIND CLOTHES THAT MATCHES YOUR STYLE</h2>
         <p class="banner__content">Browse through our diverse range of meticulously crafted garments, designed to bring
           out your individuality and cater to your sense of style.</p>
-        <button class="btn btn__primary">Shop Now</button>
+        <button class="btn__primary">Shop Now</button>
         <div class="banner__info">
           <p class="banner__info-num">200+<span class="banner__info-desc">International Brands</span></p>
           <p class="banner__info-num banner--special">2,000+<span class="banner__info-desc">High-Quality Products</span>
@@ -96,7 +99,7 @@
       <div class="product__item">
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
-          <p class="product__card-name">T-Shirt with Tape Details</p>
+          <p class="product__name">T-Shirt with Tape Details</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -111,7 +114,7 @@
         </div>
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/fit-jeans.png" alt="fit-jeans">
-          <p class="product__card-name">Skinny Fit Jeans</p>
+          <p class="product__name">Skinny Fit Jeans</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -127,7 +130,7 @@
         </div>
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/checkered-shirt.png" alt="checkered-shirt">
-          <p class="product__card-name">Checkered Shirt</p>
+          <p class="product__name">Checkered Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -142,7 +145,7 @@
         </div>
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/striped-t-shirt.png" alt="striped-t-shirt">
-          <p class="product__card-name">Sleeve Striped T-Shirt</p>
+          <p class="product__name">Sleeve Striped T-Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -158,7 +161,7 @@
           </div>
         </div>
       </div>
-      <button class="btn btn__secondary">View All</button>
+      <button class="btn__secondary">View All</button>
     </section>
   </div>
   <!-- product end -->
@@ -169,7 +172,7 @@
       <div class="product__item">
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/veritical.png" alt="veritical">
-          <p class="product__card-name">Vertical Striped Shirt</p>
+          <p class="product__name">Vertical Striped Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -186,7 +189,7 @@
         </div>
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/courage.png" alt="courage">
-          <p class="product__card-name">Courage Graphic T-Shirt</p>
+          <p class="product__name">Courage Graphic T-Shirt</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -200,7 +203,7 @@
         </div>
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/loose-fit.png" alt="loose-fit">
-          <p class="product__card-name">Loose Fit Bermuda Shorts</p>
+          <p class="product__name">Loose Fit Bermuda Shorts</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -213,7 +216,7 @@
         </div>
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/faded-skinny.png" alt="faded-skinny">
-          <p class="product__card-name">Faded Skinny Jeans</p>
+          <p class="product__name">Faded Skinny Jeans</p>
           <div class="product__evaluate">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
             <img class="product__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
@@ -227,15 +230,32 @@
           </div>
         </div>
       </div>
-      <button class="btn btn__secondary">View All</button>
+      <button class="btn__secondary">View All</button>
     </section>
   </div>
 
   <!-- browse start  -->
   <div class="container">
     <section class="browse">
-      <div class="br">
-      <h2 class="title title-secondary">BROWSE BY dress STYLE</h2>
+      <h2 class="title-primary title-primary--center">BROWSE BY dress STYLE</h2>
+      <div class="browse__item">
+        <div>
+          <p class="browse__desc">Causal</p>
+          <img class="browse__img" src="./assets/images/browses/casual.png" alt="">
+        </div>
+        <div>
+          <p class="browse__desc">Causal</p>
+          <img class="browse__img" src="./assets/images/browses/formal.png" alt="">
+        </div>
+        <div>
+          <p class="browse__desc">Causal</p>
+          <img class="browse__img" src="./assets/images/browses/party.png" alt="">
+        </div>
+        <div>
+          <p class="browse__desc">Causal</p>
+          <img class="browse__img" src="./assets/images/browses/gym.png" alt="">
+        </div>
+      </div>
     </section>
   </div>
   <!-- browse end -->
