--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -92,7 +92,7 @@
   </section>
   <!-- brand end  -->
 
-  <!-- product start  -->
+  <!-- arrival start  -->
   <div class="container">
     <section class="product product--bottom">
       <h2 class="title title-primary">new arrivals</h2>
