refactor unit rem

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -95,7 +95,7 @@
   <!-- arrival start  -->
   <div class="container">
     <section class="product product--bottom">
-      <h2 class="title title-primary">new arrivals</h2>
+      <h2 class="title-primary">new arrivals</h2>
       <div class="product__item">
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/tapede-tails.png" alt="tapede-tails">
@@ -163,12 +163,9 @@
       </div>
       <button class="btn__secondary">View All</button>
     </section>
-  </div>
-  <!-- product end -->
 
-  <div class="container">
     <section class="product">
-      <h2 class="title title-primary">top selling</h2>
+      <h2 class="title-primary">top selling</h2>
       <div class="product__item">
         <div class="product__card">
           <img class="product__card-img" src="./assets/images/products/veritical.png" alt="veritical">
@@ -232,10 +229,9 @@
       </div>
       <button class="btn__secondary">View All</button>
     </section>
-  </div>
+  <!-- product end -->
 
   <!-- browse start  -->
-  <div class="container">
     <section class="browse">
       <h2 class="title-primary title-primary--center">BROWSE BY dress STYLE</h2>
       <div class="browse__item">
@@ -244,21 +240,21 @@
           <img class="browse__img" src="./assets/images/browses/casual.png" alt="">
         </div>
         <div>
-          <p class="browse__desc">Causal</p>
+          <p class="browse__desc">Formal</p>
           <img class="browse__img" src="./assets/images/browses/formal.png" alt="">
         </div>
         <div>
-          <p class="browse__desc">Causal</p>
+          <p class="browse__desc">Party</p>
           <img class="browse__img" src="./assets/images/browses/party.png" alt="">
         </div>
         <div>
-          <p class="browse__desc">Causal</p>
+          <p class="browse__desc">Gym</p>
           <img class="browse__img" src="./assets/images/browses/gym.png" alt="">
         </div>
       </div>
     </section>
   </div>
-  <!-- browse end -->
+  <!-- browse end  -->
 
 </body>
 
