--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -12,11 +12,11 @@
   <!-- sign up start  -->
   <div class="sign-up">
     <div class="container sign-up">
-    <p class="sign-up__text">Sign up and get 20% off to your first order. <a class="sign-up__link"
-        href="javascript:void(0)">Sign Up
-        Now</a></p>
-    <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/headers/off.svg" alt="off"></a>
-  </div>
+      <p class="sign-up__text">Sign up and get 20% off to your first order. <a class="sign-up__link"
+          href="javascript:void(0)">Sign Up
+          Now</a></p>
+      <a href="javascript:void(0)"><img class="sign-up__icon" src="assets/images/headers/off.svg" alt="off"></a>
+    </div>
   </div>
 
   <!-- sign up end  -->
@@ -229,9 +229,9 @@
       </div>
       <button class="btn__secondary">View All</button>
     </section>
-  <!-- product end -->
+    <!-- product end -->
 
-  <!-- browse start  -->
+    <!-- browse start  -->
     <section class="browse">
       <h2 class="title-primary title-primary--center">BROWSE BY dress STYLE</h2>
       <div class="browse__item">
@@ -253,9 +253,19 @@
         </div>
       </div>
     </section>
-  </div>
-  <!-- browse end  -->
+    <!-- browse end  -->
 
+    <!-- comment start  -->
+    <section class="comment">
+      <h2 class="title-primary title-primary--left">OUR HAPPY CUSTOMERS</h2>
+      <div class="comment__item">
+        <p>sadasd</p>
+        <p>sadasdxcxxx</p>
+        <p>55555</p>
+      </div>
+    </section>
+    <!-- comment end  -->
+  </div>
 </body>
 
 </html>
