fix comment modifier stay alone

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -64,8 +64,8 @@
       </div>
       <img class="banner__img" src="./assets/images/banners/bg-banner.png" alt="bg-banner">
       <div class="banner__star">
-        <img class="banner__star--center" src="./assets/images/banners/star-full.png" alt="star-full">
-        <img class="banner__star--right" src="./assets/images/banners/star.svg" alt="star">
+        <img class="banner__star banner__star--center" src="./assets/images/banners/star-full.png" alt="star-full">
+        <img class="banner__star banner__star--right" src="./assets/images/banners/star.svg" alt="star">
       </div>
     </div>
   </section>
