create layout and style for comment

--- a/practice-two/src/index.html
+++ b/practice-two/src/index.html
@@ -257,11 +257,61 @@
 
     <!-- comment start  -->
     <section class="comment">
-      <h2 class="title-primary title-primary--left">OUR HAPPY CUSTOMERS</h2>
-      <div class="comment__item">
-        <p>sadasd</p>
-        <p>sadasdxcxxx</p>
-        <p>55555</p>
+      <div class="comment__head">
+        <h2 class="title-primary title-primary--left">OUR HAPPY CUSTOMERS</h2>
+        <div>
+          <img src="./assets/images/comments/next-icon.svg" alt="">
+          <img src="./assets/images/comments/prev-icon.svg" alt="">
+        </div>
+      </div>
+      <div class="comment__card">
+        <div class="comment__item">
+          <div class="comment__evaluate">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+          </div>
+          <div class="comment__name">
+            Sarah M.
+            <img class="comment__name-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+          </div>
+          <p class="comment__desc">"I'm blown away by the quality and style of the clothes I received from Shop.co. From
+            casual wear to elegant dresses, every piece I've bought has exceeded my expectations.”</p>
+        </div>
+        <div class="comment__item">
+          <div class="comment__evaluate">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+          </div>
+          <div class="comment__name">
+            Alex K.
+            <img class="comment__name-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+          </div>
+          <p class="comment__desc">"Finding clothes that align with my personal style used to be a challenge until I
+            discovered Shop.co. The range of options they offer is truly remarkable, catering to a variety of tastes and
+            occasions.”</p>
+        </div>
+        <div class="comment__item">
+          <div class="comment__evaluate">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+            <img class="comment__evaluate-img" src="./assets/images/products/star-full.svg" alt="star-full">
+          </div>
+          <div class="comment__name">
+            James L.
+            <img class="comment__name-img" src="./assets/images/comments/blue-check-mark.svg" alt="">
+          </div>
+          <p class="comment__desc">"As someone who's always on the lookout for unique fashion pieces, I'm thrilled to
+            have stumbled upon Shop.co. The selection of clothes is not only diverse but also on-point with the latest
+            trends.”</p>
+        </div>
       </div>
     </section>
     <!-- comment end  -->
